--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="reproductor">
         <ul id="listaReproduccion">
             <li>
+                <a href="sound/ManuelTurizo-ElMerengue.mp3" data-imagen="img/Manuel-Turizo.png">Bachata</a>
+            </li>
+            <li>
                 <a href="sound/BadGyal.mp3" data-imagen="img/BadGyal.png">BadGyal</a>
             </li>
             <li>
