--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="reproductor">
         <ul id="listaReproduccion">
             <li>
-                <a href="sound/ManuelTurizo-ElMerengue.mp3" data-imagen="img/Manuel-Turizo.png">Bachata</a>
+                <a href="sound/ManuelTurizo-ElMerengue.mp3" data-imagen="img/ManuelTurizo.png">Bachata</a>
             </li>
             <li>
                 <a href="sound/BadGyal.mp3" data-imagen="img/BadGyal.png">BadGyal</a>
